--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>git branch</title>
-    <link href="stylesheet" src="app.css">
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
     <h1>HELLO</h1>
